[gd_scene load_steps=8 format=4 uid="uid://cn2g0xtjnp7h2"]

[ext_resource type="Script" uid="uid://sm78osnix56f" path="res://Scripts/phase_2.gd" id="1_gtpho"]
[ext_resource type="TileSet" uid="uid://cr61rcvxrur8h" path="res://TileSets/Room1TileSet.res" id="2_2cfn4"]
[ext_resource type="PackedScene" uid="uid://cj1s32in6tw1k" path="res://Scenes/robot.tscn" id="3_o5lwa"]
[ext_resource type="PackedScene" uid="uid://cp52gaebpptxg" path="res://Scenes/trash.tscn" id="4_2cfn4"]
[ext_resource type="Theme" uid="uid://b5fspwopkw78g" path="res://Themes/MarginTheme.tres" id="4_5bxjt"]
[ext_resource type="PackedScene" uid="uid://biy6wyjvx4qj3" path="res://Scenes/right_panel.tscn" id="4_gtpho"]
[ext_resource type="PackedScene" uid="uid://gmeoe7uq2h4l" path="res://Scenes/code_block.tscn" id="6_6cv6u"]

[node name="Phase2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gtpho")

[node name="VSplitContainer" type="VSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 800
dragging_enabled = false
touch_dragger_enabled = true

[node name="TopPanel" type="Panel" parent="VSplitContainer"]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="VSplitContainer/TopPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 1330
dragging_enabled = false
touch_dragger_enabled = true

[node name="LeftPanel" type="Panel" parent="VSplitContainer/TopPanel/HSplitContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
stretch_shrink = 6

[node name="SubViewport" type="SubViewport" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(221, 128)
render_target_update_mode = 4

[node name="TileMapLayer" type="TileMapLayer" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport"]
tile_map_data = PackedByteArray("AAAGAAcAAQAOAAoAAAAHAAcAAQAOAAoAAAANAAYAAQAOAAoAAFANAAUAAQAOAAoAAFANAAQAAQAOAAoAAFANAAMAAQAOAAoAAFANAAIAAQAOAAoAAFANAAEAAQAOAAoAAFANAAAAAQAOAAoAAAAMAAAAAQAOAAoAAAALAAAAAQAOAAoAAAAKAAAAAQAOAAoAAAAJAAAAAQAOAAoAAAAIAAAAAQAOAAoAAAAHAAAAAQAOAAoAAAAGAAAAAQAOAAoAAAAFAAAAAQAOAAoAAAAEAAAAAQAOAAoAAAADAAAAAQAOAAoAAAACAAAAAQAOAAoAAAAAAAIAAQAOAAoAAFAAAAEAAQAOAAoAAFAAAAMAAQAOAAoAAFAAAAQAAQAOAAoAAFAAAAUAAQAOAAoAAFAAAAYAAQAOAAoAAFAAAAAAAQAOAAoAAAABAAAAAQAOAAoAAAACAAMAAQAGAAQAAAABAAMAAQAGAAQAAAALAAMAAQABABUAAAAMAAMAAQABABUAAAABAAQAAQAGAAQAAAAKAAQAAQAEAAsAAAALAAQAAQAEAAsAAAAMAAQAAQAEAAsAAAAMAAUAAQAGAAQAAAALAAUAAQAGAAQAAAAKAAUAAQAGAAQAAAAJAAUAAQAGAAQAAAAIAAUAAQAGAAQAAAAHAAUAAQAGAAQAAAAGAAUAAQAGAAQAAAAFAAUAAQAGAAQAAAAEAAUAAQAEAAsAAAACAAUAAQAGAAQAAAABAAUAAQABABUAAAABAAYAAQABABUAAAACAAYAAQABABUAAAADAAYAAQABABUAAAAFAAYAAQAGAAQAAAAGAAYAAQAGAAQAAAAHAAYAAQABABUAAAAIAAYAAQABABUAAAAJAAYAAQABABUAAAAMAAYAAQAGAAQAAAALAAYAAQAGAAQAAAAKAAYAAQAGAAQAAAAMAAIAAQAGAAQAAAAMAAEAAQAGAAQAAAACAAEAAQAGAAQAAAABAAEAAQAGAAQAAAABAAIAAQAGAAQAAAACAAIAAQAGAAQAAAALAAIAAQAGAAQAAAANAAcAAQAOAAoAAAAMAAcAAQAOAAoAAAALAAcAAQAOAAoAAAAKAAcAAQAOAAoAAAAJAAcAAQAOAAoAAAAIAAcAAQAOAAoAAAAAAAcAAQAOAAoAAAABAAcAAQAOAAoAAAACAAcAAQAOAAoAAAADAAcAAQAOAAoAAAAFAAcAAQAOAAoAAAAKAAIAAQAGAAQAAAAJAAIAAQAGAAQAAAAIAAIAAQAGAAQAAAAHAAIAAQAGAAQAAAAGAAIAAQAGAAQAAAAFAAIAAQAGAAQAAAAEAAIAAQAGAAQAAAADAAIAAQAGAAQAAAADAAMAAQAGAAQAAAADAAQAAQAEAAsAAAAEAAQAAQAEAAsAAAAGAAQAAQAGAAQAAAAFAAQAAQAGAAQAAAAHAAQAAQAGAAQAAAAIAAQAAQAGAAQAAAAJAAQAAQAEAAsAAAALAAEAAQAGAAQAAAAKAAEAAQAGAAQAAAAJAAEAAQAGAAQAAAAIAAEAAQAGAAQAAAAHAAEAAQAGAAQAAAAGAAEAAQAEAAsAAAAFAAEAAQAEAAsAAAAEAAEAAQAEAAsAAAADAAEAAQAGAAQAAAADAAUAAQAGAAQAAAAKAAMAAQABABUAAAAJAAMAAQAGAAQAAAAIAAMAAQAGAAQAAAAHAAMAAQAGAAQAAAAGAAMAAQAGAAQAAAAFAAMAAQAGAAQAAAAEAAMAAQAGAAQAAAAzADYAAQADABQAAAD//wMAAQAGAAsAAFD//wQAAQAGAAsAAFD//wUAAQAGAAsAAFAEAAcAAQAOAAoAAAAEAAYAAQAEAAsAAAACAAQAAQAGAAQAAAA=")
tile_set = ExtResource("2_2cfn4")

[node name="Robot" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("3_o5lwa")]
position = Vector2(23.666668, 24.833334)

[node name="Trash" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("4_2cfn4")]
position = Vector2(56, 56)

[node name="Trash2" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("4_2cfn4")]
position = Vector2(24, 72)

[node name="Trash4" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("4_2cfn4")]
position = Vector2(104, 40)

[node name="Trash5" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("4_2cfn4")]
position = Vector2(152, 24)

[node name="Trash6" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("4_2cfn4")]
position = Vector2(200, 24)

[node name="Trash7" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("4_2cfn4")]
position = Vector2(136, 56)

[node name="Trash8" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("4_2cfn4")]
position = Vector2(88, 88)

[node name="Trash9" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("4_2cfn4")]
position = Vector2(152, 88)

[node name="ProgressBar" type="ProgressBar" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
step = 1.0

[node name="RightPanel" parent="VSplitContainer/TopPanel/HSplitContainer" node_paths=PackedStringArray("robot") instance=ExtResource("4_gtpho")]
layout_mode = 2
robot = NodePath("../LeftPanel/VBoxContainer/SubViewportContainer/SubViewport/Robot")

[node name="BottomPanel" type="Panel" parent="VSplitContainer"]
clip_contents = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VSplitContainer/BottomPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_5bxjt")

[node name="HFlowContainer" type="HFlowContainer" parent="VSplitContainer/BottomPanel/MarginContainer"]
layout_mode = 2

[node name="CodeBlock" parent="VSplitContainer/BottomPanel/MarginContainer/HFlowContainer" instance=ExtResource("6_6cv6u")]
layout_mode = 2
keep_pressed_outside = true
text = "CODEBLOCK"
action_type = 1

[node name="CodeBlock2" parent="VSplitContainer/BottomPanel/MarginContainer/HFlowContainer" instance=ExtResource("6_6cv6u")]
layout_mode = 2
keep_pressed_outside = true
text = "CODEBLOCK"
action_type = 2

[node name="CodeBlock3" parent="VSplitContainer/BottomPanel/MarginContainer/HFlowContainer" instance=ExtResource("6_6cv6u")]
layout_mode = 2
keep_pressed_outside = true
text = "CODEBLOCK"
action_type = 3

[node name="CodeBlock4" parent="VSplitContainer/BottomPanel/MarginContainer/HFlowContainer" instance=ExtResource("6_6cv6u")]
layout_mode = 2
keep_pressed_outside = true
text = "CODEBLOCK"
action_type = 4

[node name="CodeBlock5" parent="VSplitContainer/BottomPanel/MarginContainer/HFlowContainer" instance=ExtResource("6_6cv6u")]
layout_mode = 2
keep_pressed_outside = true
text = "CODEBLOCK"
action_type = 5

[node name="CodeBlock6" parent="VSplitContainer/BottomPanel/MarginContainer/HFlowContainer" instance=ExtResource("6_6cv6u")]
layout_mode = 2
keep_pressed_outside = true
text = "CODEBLOCK"
action_type = 6

[node name="CodeBlock7" parent="VSplitContainer/BottomPanel/MarginContainer/HFlowContainer" instance=ExtResource("6_6cv6u")]
layout_mode = 2
keep_pressed_outside = true
text = "CODEBLOCK"
action_type = 7

[node name="CodeBlock8" parent="VSplitContainer/BottomPanel/MarginContainer/HFlowContainer" instance=ExtResource("6_6cv6u")]
layout_mode = 2
keep_pressed_outside = true
text = "CODEBLOCK"
action_type = 8

[node name="CodeBlock9" parent="VSplitContainer/BottomPanel/MarginContainer/HFlowContainer" instance=ExtResource("6_6cv6u")]
layout_mode = 2
keep_pressed_outside = true
text = "CODEBLOCK"
action_type = 9

[node name="CodeBlock10" parent="VSplitContainer/BottomPanel/MarginContainer/HFlowContainer" instance=ExtResource("6_6cv6u")]
layout_mode = 2
keep_pressed_outside = true
text = "CODEBLOCK"
action_type = 10

[node name="CodeBlock11" parent="VSplitContainer/BottomPanel/MarginContainer/HFlowContainer" instance=ExtResource("6_6cv6u")]
layout_mode = 2
keep_pressed_outside = true
text = "CODEBLOCK"
action_type = 11

[node name="CodeBlock12" parent="VSplitContainer/BottomPanel/MarginContainer/HFlowContainer" instance=ExtResource("6_6cv6u")]
layout_mode = 2
keep_pressed_outside = true
text = "CODEBLOCK"
action_type = 12

[node name="CodeBlock13" parent="VSplitContainer/BottomPanel/MarginContainer/HFlowContainer" instance=ExtResource("6_6cv6u")]
layout_mode = 2
keep_pressed_outside = true
text = "CODEBLOCK"
action_type = 13

[connection signal="body_entered" from="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport/Trash" to="." method="_on_trash_body_entered"]
[connection signal="body_entered" from="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport/Trash2" to="." method="_on_trash_body_entered"]
[connection signal="body_entered" from="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport/Trash4" to="." method="_on_trash_body_entered"]
[connection signal="body_entered" from="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport/Trash5" to="." method="_on_trash_body_entered"]
[connection signal="body_entered" from="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport/Trash6" to="." method="_on_trash_body_entered"]
[connection signal="body_entered" from="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport/Trash7" to="." method="_on_trash_body_entered"]
[connection signal="body_entered" from="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport/Trash8" to="." method="_on_trash_body_entered"]
[connection signal="body_entered" from="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport/Trash9" to="." method="_on_trash_body_entered"]
